<resources>
    <string name="app_name">RestClient</string>
    <string name="is_connected">is connected?</string>
    <string name="title_activity_login">Sign in</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>

    <string name="city_prompt">Choose a City</string>
    <string name="prices">Prices :</string>
    <string name="deposit">Deposit :</string>
    <string name="houseno">HouseNo :</string>
    <string name="street_ex_123">Street(ex: 123) :</string>
    <string name="no_image_selected">No Image Selected</string>
    <string name="selectimage">SelectImage</string>
    <string name="save">Save</string>
    <string name="cancel">Cancel</string>
    <string name="username">UserName :</string>
    <string name="telephone">Telephone :</string>
    <string-array name="city_arrays">
        <item>Phnom Penh</item>
        <item>Battambang</item>
    </string-array>
</resources>
